@startuml

title __DISTRIBUTEDCOMPUTINGCA1-TWEETBOOKGRAMMESSAGINGSERVICE's Class Diagram__\n


    class EchoClient2 {
        {static} + messageArray : ArrayList<String>
        {static} ~ endMessage : String
        {static} ~ logOutSymbol : String
        {static} + main()
    }

  


    class EchoClientHelper2 {
        ~ br : BufferedReader
        {static} ~ endMessage : String
        ~ is : InputStreamReader
        ~ messageArray : ArrayList<String>
        - serverHost : InetAddress
        - serverPort : int
        + done()
        + download()
        + getEcho()
        + login()
        + logout()
        + upload()
        ~ EchoClientHelper2()
    }

  


    class EchoServer3 {
        {static} + main()
    }

  


    class EchoServerThread {
        {static} ~ endMessage : String
        + run()
        ~ EchoServerThread()
    }

  


    class MyStreamSocket {
        - input : BufferedReader
        - output : PrintWriter
        - socket : Socket
        + close()
        + receiveMessage()
        + sendMessage()
        ~ MyStreamSocket()
        ~ MyStreamSocket()
        - setStreams()
    }

  

  EchoClientHelper2 o-- MyStreamSocket : mySocket
  EchoServerThread .up.|> java.lang.Runnable
  EchoServerThread o-- EchoClient2 : client2
  EchoServerThread o-- MyStreamSocket : myDataSocket
  MyStreamSocket -up-|> java.net.Socket


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
